--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "framer-motion": "^11.3.28",
     "next": "14.2.5",
     "next-intl": "^3.17.3",
     "react": "^18",
